--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -19,10 +19,13 @@
                 <form method="POST" action="{% block form_action %}{% endblock %}">
                     {{ form.text }}
                     {% csrf_token %}
-                    {% if error %}
+                    {% if form.errors %}  1
                         <div class="form-group has-error">
+                            <div class="help-block">{{ form.text.errors }}</div>
+                            2
                         </div>
                     {% endif %}
+                </form>
             </div>
         </div>
 
